      dh_clean. Thanks to Andreas Beckmann for the idea.  (Closes: #884817)
  * checks/standards-version.pm:
    + [CL] Avoid misleading tag descriptions when emitting valid
      timewarp-standards-version warnings if the date parts are identical
      (ie. "2017-11-30 < 2017-11-30"). Thanks to Andrea Bolognani
      eof@kiyuko.org> for the report.  (Closes: #884785)

  * data/debhelper/compat-level:
    + [MR] Bump the experimental debhelper compat level to 12.
      (Closes: #884678)
    + [CL] Bump the recommended debehlper compat level to 11, emitting a
      pedantic warning when using lower level.  (Closes: #884699)
  * data/files/js-libraries:
    + [CL] Detect embedded jQuery libraries with version number in their
      filenames (eg. jquery-1.10.2.min.js).  (Closes: #833613)
    + [CL] Also emit embedded-javascript-library for Twitter Bootstrap and
      "mustache".

  * reporting/templates/maintainer.tmpl:
    + [CL] Correct invalid "else if" syntax with "elsif". Thanks to Uwe
      Kleine-König for the report.

  * t/tests/fields-malformed-vcs-fields-unrel:
    + [CL] Add a regression test for a potential false positive in the
      "vcs-field-has-unexpected-spaces" tag.  (Ref: #884870)
  * t/tests/files-multiarch-foreign-files:
    + [CL] Don't hardcode architecture triplet to fix FTBFS on non-amd64
      architectures.  (Closes: #884683)

 -- Chris Lamb <lamby@debian.org>  Mon, 18 Dec 2017 10:37:45 +0000

lintian (2.5.65) unstable; urgency=medium

  * t/tests/files-pkgconfig:
    + [CL] Update tests to reflect change in Multi-Arch foreign detection.

 -- Chris Lamb <lamby@debian.org>  Mon, 18 Dec 2017 10:04:30 +0000

lintian (2.5.64) unstable; urgency=medium

  * checks/files.pm:
    + [CL] Apply patch from Sven Joachim to prevent false-positives
      multiarch-foreign-static-library for non-multiarch packages.
      (Closes: #884655)

  * reporting/templates/maintainer.tmpl:
    + [CL] Don't link full report entries to themselves.  (Closes: #884572)