@@ -324,3 +324,21 @@ Info: A file specified in the <tt>Files-Excluded</tt> header in
  .
  mk-origtargz(1) is typically responsible for removing such files. Support
  in <tt>git-buildpackage</tt> is being tracked in #812721.
+
+Tag: missing-notice-file-for-apache-license
+Severity: serious
+Certainty: possible
+Info: The package appears to be licensed under the Apache 2.0 license and
+ a <tt>NOTICE</tt> file exists in the source tree. However, no files called
+ <tt>NOTICE</tt> are installed in any of the binary packages.
+ .
+ The Apache 2.0 license requires distributing of such files:
+ .
+  (d) If the Work includes a "NOTICE" text file as part of its
+      distribution, then any Derivative Works that You distribute must
+      include a readable copy of the attribution notices contained
+      within such NOTICE file [..]
+ .
+ Please include the file in your package, for example by adding
+ <tt>path/to/NOTICE</tt> to a <tt>debian/package.install</tt> file.
+Ref: /usr/share/common-licenses/Apache-2.0
