@@ -1,0 +1,1 @@
+This file is installed to the binary package.
