@@ -1,0 +1,1 @@
+NOTICE usr/share/doc/foo
