@@ -1,0 +1,1 @@
+This file is not installed but is not a A_pache license NOTICE file anyway.
