@@ -1,0 +1,5 @@
+Testname: source-copyright-missing-notice-file-for-apache-license
+Version: 1.0
+Description: Test for no packages missing Apache NOTICE files
+Test-For:
+ missing-notice-file-for-apache-license
